# appimage-builder

./: Dockerfile  pyproject.toml
appimagebuilder/: context.py
appimagebuilder/modules/: appimage.py
appimagebuilder/modules/prime/: appimage_primer.py
appimagebuilder/modules/setup/: apprun_utils.py  desktop_entry_generator.py
appimagebuilder/modules/setup/apprun_2/: executables_patcher.py
appimagebuilder/modules/setup/apprun_3/: apprun3.py
appimagebuilder/modules/setup/apprun_3/helpers/: glibc_module.py  glibstcpp_module.py  mime.py
appimagebuilder/recipe/: schema.py
recipes/appimage-builder/: AppImageBuilder.yml
recipes/bash/: AppImageBuilder.yml  bash-apprun-v3.yml
recipes/bash-files/: AppImageBuilder.yml
recipes/bash-pacman/: AppImageBuilder.yml
recipes/gimp/: AppImageBuilder.yml
recipes/gnome-calculator/: AppImageBuilder.yml
recipes/hello-world-gtk/: AppImageBuilder.yml
recipes/hello-world-qt5/: AppImageBuilder.yml  recipe-with-apprun-v3.yml
recipes/hello-world-qt6/: AppImageBuilder.yml
recipes/kcalc/: AppImageBuilder.yml
recipes/kcalc-files/: AppImageBuilder.yml
recipes/kcalc-nbc/: AppImageBuilder.yml
recipes/parole/: AppImageBuilder.yml
recipes/pyqt5/: AppImageBuilder.yml
recipes/python/: AppImageBuilder.yml
recipes/qmlscene/: AppImageBuilder.yml
recipes/tkinter/: AppImageBuilder.yml
recipes/vlc/: AppImageBuilder.yml
recipes/wget/: AppImageBuilder.yml
recipes/wine/: AppImageBuilder.yml
