[project]
name = "appimage-builder"
version = "1.1.0"
description = "Recipe based AppImage creation meta-tool"
authors = [
    {name = "Alexis Lopez Zubieta",email = "contact@azubieta.net"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyyaml (>=6.0.2,<7.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "schema (>=0.7.7,<0.8.0)",
    "packaging (>=25.0,<26.0)",
    "questionary (>=2.1.0,<3.0.0)",
    "emrichen (>=0.4.0,<0.5.0)",
    "shutils (>=0.1.0,<0.2.0)",
    "ruamel-yaml (>=0.18.14,<0.19.0)",
    "roam (>=0.3.1,<0.4.0)",
    "urllib3 (>=2.5.0,<3.0.0)",
    "lief (>=0.16.6,<0.17.0)",
    "python-gnupg (>=0.5.4,<0.6.0)",
    "libconf (>=2.0.1,<3.0.0)",
    "pydpkg (>=1.9.4,<2.0.0)"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]

[project.urls]
homepage = "https://github.com/AppImageCrafters/appimage-builder"
"Bug Tracker" = "https://github.com/AppImageCrafters/appimage-builder/issues"
documentation = "https://appimage-builder.readthedocs.io"
repository = "https://github.com/AppImageCrafters/appimage-builder"

[project.scripts]
appimage-builder = "appimagebuilder.__main__:__main__"

[tool.poetry]
packages = [{ include = "appimagebuilder" }]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
